Messing around with AST show visitor trying to get double dispatch working, but with no success. Now using old-style switches.

--- a/compiler/ast.cfg
+++ b/compiler/ast.cfg
@@ -7,35 +7,35 @@
 #-----------------------------------------------------------------
 
 # Program
-Program:   [var_decls*, proc_decls*]
+Program:   [vardecls*, procdecls*]
 
 # Variable declarations
 VarDecls:  [decl**]
-VarDecl:   [form, type, name, expr*]
+VarDecl:   [form, type, name*, expr*]
 
 # Procedure declarations
 ProcDecls: [decl**]
-ProcDecl:  [type, name, formals*, var_decls*, stmt*]
+ProcDecl:  [type, name*, formals*, vardecls*, stmt*]
 
 # Formal parameters
 Formals:   [params**]
 Param:     [type, name]
 
 # Statements
+Seq:       [stmt**]
+Par:       [stmt**]
 Skip:      []
-Pcall:     [name, expr*]
+Pcall:     [name*, expr*]
 Ass:       [left*, expr*]
 In:        [left*, expr*]
 Out:       [left*, expr*]
-If:        [cond*, then_stmt*, else_stmt*]
-While:     [cond*, stmt]
+If:        [cond*, thenstmt*, elsestmt*]
+While:     [cond*, stmt*]
 For:       [var*, init*, bound*, stmt*]
 On:        [core*, pcall*]
 Connect:   [left*, core*, dest*]
 Aliases:   [left*, name*, expr*]
 Return:    [expr*]
-Seq:       [stmt**]
-Par:       [stmt**]
 
 # Expressions
 ExprList:  [expr**]
