Created AST walker class which is subclassed by the printer and translate classes. Pretty printing in sire sytnax now working reasonably.

--- a/compiler/ast.cfg
+++ b/compiler/ast.cfg
@@ -25,7 +25,7 @@ Param:     [type, name]
 Seq:       [stmt**]
 Par:       [stmt**]
 Skip:      []
-Pcall:     [name*, expr*]
+Pcall:     [name*, args*]
 Ass:       [left*, expr*]
 In:        [left*, expr*]
 Out:       [left*, expr*]
@@ -39,6 +39,7 @@ Return:    [expr*]
 
 # Expressions
 ExprList:  [expr**]
+Single:    [elem*]
 Unary:     [op, elem*]
 Binop:     [op, elem*, right*]
 
