--- a/compiler/ast.cfg
+++ b/compiler/ast.cfg
@@ -7,48 +7,55 @@
 #-----------------------------------------------------------------
 
 # Program
-Program:   [vardecls*, procdecls*]
+Program:      [vardecls*, procdecls*]
 
 # Variable declarations
-VarDecls:  [decl**]
-VarDecl:   [form, type, name*, expr*]
+VarDecls:     [decl**]
+DeclVar:      [type, name*, expr*]
+DeclArray:    [type, name*, expr*]
+DeclVal:      [name*, expr*]
+DeclPort:     [name*, expr*]
 
 # Procedure declarations
-ProcDecls: [decl**]
-ProcDecl:  [type, name*, formals*, vardecls*, stmt*]
+ProcDecls:    [decl**]
+DeclProc:     [name*, formals*, vardecls*, stmt*]
+DeclFunc:     [name*, formals*, vardecls*, stmt*]
 
 # Formal parameters
-Formals:   [params**]
-Param:     [type, name]
+Formals:      [params**]
+ParamVar:     [name]
+ParamAlias:   [name]
+ParamVal:     [name]
+ParamChanend: [name]
 
 # Statements
-Seq:       [stmt**]
-Par:       [stmt**]
-Skip:      []
-Pcall:     [name*, args*]
-Ass:       [left*, expr*]
-In:        [left*, expr*]
-Out:       [left*, expr*]
-If:        [cond*, thenstmt*, elsestmt*]
-While:     [cond*, stmt*]
-For:       [var*, init*, bound*, stmt*]
-On:        [core*, pcall*]
-Connect:   [left*, core*, dest*]
-Aliases:   [left*, name*, expr*]
-Return:    [expr*]
+StmtSeq:      [stmt**]
+StmtPar:      [stmt**]
+StmtSkip:     []
+StmtPcall:    [name*, args*]
+StmtAss:      [left*, expr*]
+StmtIn:       [left*, expr*]
+StmtOut:      [left*, expr*]
+StmtIf:       [cond*, thenstmt*, elsestmt*]
+StmtWhile:    [cond*, stmt*]
+StmtFor:      [var*, init*, bound*, stmt*]
+StmtOn:       [core*, pcall*]
+StmtConnect:  [left*, core*, dest*]
+StmtAliases:  [left*, name*, expr*]
+StmtReturn:   [expr*]
 
 # Expressions
-ExprList:  [expr**]
-Single:    [elem*]
-Unary:     [op, elem*]
-Binop:     [op, elem*, right*]
+ExprList:     [expr**]
+ExprSingle:   [elem*]
+ExprUnary:    [op, elem*]
+ExprBinop:    [op, elem*, right*]
 
 # Elements
-Group:     [expr*]
-Sub:       [name*, expr*]
-Fcall:     [name*, args*]
-Number:    [value]
-Boolean:   [value]
-String:    [value]
-Char:      [value]
-Id:        [value]
+ElemGroup:    [expr*]
+ElemSub:      [name*, expr*]
+ElemFcall:    [name*, args*]
+ElemNumber:   [value]
+ElemBoolean:  [value]
+ElemString:   [value]
+ElemChar:     [value]
+ElemId:       [value]
