Finished implementation of semantics, symbol and signature. Not yet working or tested though.

--- a/compiler/ast.cfg
+++ b/compiler/ast.cfg
@@ -7,26 +7,26 @@
 #-----------------------------------------------------------------
 
 # Program
-Program:      [vardecls*, procdecls*]
+Program:      [decls*, defs*]
 
 # Variable declarations
-VarDecls:     [decl**]
-DeclVar:      [type, name*, expr*]
-DeclArray:    [type, name*, expr*]
-DeclVal:      [name*, expr*]
-DeclPort:     [name*, expr*]
+Decls:        [decl**]
+DeclSingle:   [name*, type, form, expr*]
+DeclArray:    [name*, type, form, expr*]
+DeclVal:      [name*, type, form, expr*]
+DeclPort:     [name*, type, form, expr*]
 
 # Procedure declarations
-ProcDecls:    [decl**]
-DeclProc:     [name*, formals*, vardecls*, stmt*]
-DeclFunc:     [name*, formals*, vardecls*, stmt*]
+Defs:         [decl**]
+DefProc:      [name*, formals*, vardecls*, stmt*]
+DefFunc:      [name*, formals*, vardecls*, stmt*]
 
 # Formal parameters
 Formals:      [params**]
-ParamVar:     [name]
-ParamAlias:   [name]
-ParamVal:     [name]
-ParamChanend: [name]
+ParamVar:     [name, type, form]
+ParamAlias:   [name, type, form]
+ParamVal:     [name, type, form]
+ParamChanend: [name, type, form]
 
 # Statements
 StmtSeq:      [stmt**]
