Done bulk of debugging of semantic analysis. Tested only on simple programs, but mostly there now. Extended the typing system by creating a new class with specifier and form attributes. This seems to capture enough generality.

--- a/compiler/ast.cfg
+++ b/compiler/ast.cfg
@@ -7,55 +7,55 @@
 #-----------------------------------------------------------------
 
 # Program
-Program:      [decls*, defs*]
+Program:        [decls*, defs*]
 
 # Variable declarations
-Decls:        [decl**]
-DeclSingle:   [name*, type, form, expr*]
-DeclArray:    [name*, type, form, expr*]
-DeclVal:      [name*, type, form, expr*]
-DeclPort:     [name*, type, form, expr*]
+Decls:          [decl**]
+DeclSingle:     [name, type, expr*] # Type(var, single)
+DeclArray:      [name, type, expr*] # Type(var, array)
+DeclVal:        [name, type, expr*] # Type(val, single)
+DeclPort:       [name, type, expr*] # Type(port, single)
 
 # Procedure declarations
-Defs:         [decl**]
-DefProc:      [name*, formals*, vardecls*, stmt*]
-DefFunc:      [name*, formals*, vardecls*, stmt*]
+Defs:           [decl**]
+DefProc:        [name, type, formals*, vardecls*, stmt*]
+DefFunc:        [name, type, formals*, vardecls*, stmt*]
 
 # Formal parameters
-Formals:      [params**]
-ParamVar:     [name, type, form]
-ParamAlias:   [name, type, form]
-ParamVal:     [name, type, form]
-ParamChanend: [name, type, form]
+Formals:        [params**]
+ParamSingle:    [name, type] # Type(var, single)
+ParamAlias:     [name, type] # Type(var, alias)
+ParamVal:       [name, type] # Type(val, single)
+ParamChanend:   [name, type] # Type(chanend, single)
 
 # Statements
-StmtSeq:      [stmt**]
-StmtPar:      [stmt**]
-StmtSkip:     []
-StmtPcall:    [name*, args*]
-StmtAss:      [left*, expr*]
-StmtIn:       [left*, expr*]
-StmtOut:      [left*, expr*]
-StmtIf:       [cond*, thenstmt*, elsestmt*]
-StmtWhile:    [cond*, stmt*]
-StmtFor:      [var*, init*, bound*, stmt*]
-StmtOn:       [core*, pcall*]
-StmtConnect:  [left*, core*, dest*]
-StmtAliases:  [left*, name*, expr*]
-StmtReturn:   [expr*]
+StmtSeq:        [stmt**]
+StmtPar:        [stmt**]
+StmtSkip:       []
+StmtPcall:      [name, args*]
+StmtAss:        [left*, expr*]
+StmtIn:         [left*, expr*]
+StmtOut:        [left*, expr*]
+StmtIf:         [cond*, thenstmt*, elsestmt*]
+StmtWhile:      [cond*, stmt*]
+StmtFor:        [var*, init*, bound*, stmt*]
+StmtOn:         [core*, pcall*]
+StmtConnect:    [left*, core*, dest*]
+StmtAliases:    [left*, name, expr*]
+StmtReturn:     [expr*]
 
 # Expressions
-ExprList:     [expr**]
-ExprSingle:   [elem*]
-ExprUnary:    [op, elem*]
-ExprBinop:    [op, elem*, right*]
+ExprList:       [expr**]
+ExprSingle:     [elem*]
+ExprUnary:      [op, elem*]
+ExprBinop:      [op, elem*, right*]
 
 # Elements
-ElemGroup:    [expr*]
-ElemSub:      [name*, expr*]
-ElemFcall:    [name*, args*]
-ElemNumber:   [value]
-ElemBoolean:  [value]
-ElemString:   [value]
-ElemChar:     [value]
-ElemId:       [value]
+ElemGroup:      [expr*]
+ElemSub:        [name, expr*]
+ElemFcall:      [name, args*]
+ElemNumber:     [value]
+ElemBoolean:    [value]
+ElemString:     [value]
+ElemChar:       [value]
+ElemId:         [name]
