More fixes to semantic analysis, working reasonably well now. Also added a TODO file.

--- a/compiler/ast.cfg
+++ b/compiler/ast.cfg
@@ -6,6 +6,8 @@
 #   <name>      - an attribute
 #-----------------------------------------------------------------
 
+# TODO: maybe collapse decls and params with new type?
+
 # Program
 Program:        [decls*, defs*]
 
