Did some more work on sire.py with verbose messages. Decided to change AST declatation/def/param classes to be signular and encapsulate all state in type. Only just started doing this.

--- a/compiler/ast.cfg
+++ b/compiler/ast.cfg
@@ -13,22 +13,15 @@ Program:        [decls*, defs*]
 
 # Variable declarations
 Decls:          [decl**]
-DeclSingle:     [name, type, expr*] # Type(var, single)
-DeclArray:      [name, type, expr*] # Type(var, array)
-DeclVal:        [name, type, expr*] # Type(val, single)
-DeclPort:       [name, type, expr*] # Type(port, single)
+Decl:           [name, type]
 
 # Procedure declarations
 Defs:           [decl**]
-DefProc:        [name, type, formals*, vardecls*, stmt*]
-DefFunc:        [name, type, formals*, vardecls*, stmt*]
+Def:            [name, type, formals*, decls*, stmt*]
 
 # Formal parameters
 Formals:        [params**]
-ParamSingle:    [name, type] # Type(var, single)
-ParamAlias:     [name, type] # Type(var, alias)
-ParamVal:       [name, type] # Type(val, single)
-ParamChanend:   [name, type] # Type(chanend, single)
+Param:          [name, type]
 
 # Statements
 StmtSeq:        [stmt**]
