Refactored AST decl/def/param classes.

--- a/compiler/ast.cfg
+++ b/compiler/ast.cfg
@@ -13,7 +13,7 @@ Program:        [decls*, defs*]
 
 # Variable declarations
 Decls:          [decl**]
-Decl:           [name, type]
+Decl:           [name, type, expr]
 
 # Procedure declarations
 Defs:           [decl**]
