Translation up and working - it produces valid XC for sequential mergesort.

--- a/compiler/ast.cfg
+++ b/compiler/ast.cfg
@@ -35,8 +35,8 @@ StmtIf:         [cond*, thenstmt*, elsestmt*]
 StmtWhile:      [cond*, stmt*]
 StmtFor:        [var*, init*, bound*, stmt*]
 StmtOn:         [core*, pcall*]
-StmtConnect:    [left*, core*, dest*]
-StmtAliases:    [left*, name, expr*]
+StmtConnect:    [src, core*, dest*]
+StmtAliases:    [dest, name, expr*]
 StmtReturn:     [expr*]
 
 # Expressions
