Implemented parsing end of length-qualified array parameters.

--- a/compiler/ast.cfg
+++ b/compiler/ast.cfg
@@ -21,7 +21,7 @@ Def:            [name, type, formals*, decls*, stmt*]
 
 # Formal parameters
 Formals:        [params**]
-Param:          [name, type]
+Param:          [name, type, expr]
 
 # Statements
 StmtSeq:        [stmt**]
