Fixed some bugs with the pretty printer mainly to do with on and separators in blocks.

--- a/compiler/ast.cfg
+++ b/compiler/ast.cfg
@@ -49,6 +49,7 @@ ExprBinop:      [op, elem*, right*]
 ElemGroup:      [expr*]
 ElemSub:        [name, expr*]
 ElemFcall:      [name, args*]
+ElemPcall:      [name, args*]
 ElemNumber:     [value]
 ElemBoolean:    [value]
 ElemString:     [value]
