--- a/doc/Makefile
+++ b/doc/Makefile
@@ -5,4 +5,6 @@ SOURCE_INCLUDE_DIRS=../../tool_sire
 XDOC_DIR ?= ../../xdoc
 include $(XDOC_DIR)/Makefile.inc
 
-all: html pdf
+
+#all: html pdf
+all: html
