--- a/compiler/ast.cfg
+++ b/compiler/ast.cfg
@@ -1,3 +1,8 @@
+# Copyright (c) 2011, James Hanlon, All rights reserved
+# This software is freely distributable under a derivative of the
+# University of Illinois/NCSA Open Source License posted in
+# LICENSE.txt and at <http://github.xcore.com/>
+
 #-----------------------------------------------------------------
 # Each entry is a Node sub-class name, listing the attributes
 # and child nodes of the class:
