Language syntax changes.

--- a/src/ast.cfg
+++ b/src/ast.cfg
@@ -30,7 +30,7 @@ Param:          [name, type, expr]
 
 # Statements
 StmtSeq:        [stmt**]
-StmtPar:        [stmt**]
+StmtPar:        [pcall**]
 StmtSkip:       []
 StmtPcall:      [name, args*]
 StmtAss:        [left*, expr*]
@@ -38,7 +38,8 @@ StmtIn:         [left*, expr*]
 StmtOut:        [left*, expr*]
 StmtIf:         [cond*, thenstmt*, elsestmt*]
 StmtWhile:      [cond*, stmt*]
-StmtFor:        [var*, init*, step*, bound*, stmt*]
+StmtFor:        [var*, init*, bound*, step*, stmt*]
+StmtRep:        [var*, init*, count*, pcall*]
 StmtOn:         [core*, pcall*]
 StmtConnect:    [src, core*, dest*]
 StmtAliases:    [dest, name, expr*]
@@ -53,6 +54,7 @@ ExprBinop:      [op, elem*, right*]
 # Elements
 ElemGroup:      [expr*]
 ElemSub:        [name, expr*]
+ElemSlice:      [name, expr*, expr*]
 ElemFcall:      [name, args*]
 ElemPcall:      [name, args*]
 ElemNumber:     [value]
