--- a/src/ast.cfg
+++ b/src/ast.cfg
@@ -34,15 +34,13 @@ StmtPar:        [pcall**]
 StmtSkip:       []
 StmtPcall:      [name, args*]
 StmtAss:        [left*, expr*]
-StmtIn:         [left*, expr*]
-StmtOut:        [left*, expr*]
+StmtAlias:      [dest, name, begin*, end*]
 StmtIf:         [cond*, thenstmt*, elsestmt*]
 StmtWhile:      [cond*, stmt*]
 StmtFor:        [var*, init*, bound*, step*, stmt*]
 StmtRep:        [var*, init*, count*, pcall*]
 StmtOn:         [core*, pcall*]
 StmtConnect:    [src, core*, dest*]
-StmtAliases:    [dest, name, expr*]
 StmtReturn:     [expr*]
 
 # Expressions
@@ -54,7 +52,7 @@ ExprBinop:      [op, elem*, right*]
 # Elements
 ElemGroup:      [expr*]
 ElemSub:        [name, expr*]
-ElemSlice:      [name, expr*, expr*]
+ElemSlice:      [name, begin*, end*]
 ElemFcall:      [name, args*]
 ElemPcall:      [name, args*]
 ElemNumber:     [value]
@@ -62,3 +60,4 @@ ElemBoolean:    [value]
 ElemString:     [value]
 ElemChar:       [value]
 ElemId:         [name]
+
