--- a/src/ast.cfg
+++ b/src/ast.cfg
@@ -34,13 +34,12 @@ StmtPar:        [pcall**]
 StmtSkip:       []
 StmtPcall:      [name, args*]
 StmtAss:        [left*, expr*]
-StmtAlias:      [dest, name, begin*, end*]
+StmtAlias:      [left*, slice*]
 StmtIf:         [cond*, thenstmt*, elsestmt*]
 StmtWhile:      [cond*, stmt*]
 StmtFor:        [var*, init*, bound*, step*, stmt*]
 StmtRep:        [var*, init*, count*, pcall*]
 StmtOn:         [core*, pcall*]
-StmtConnect:    [src, core*, dest*]
 StmtReturn:     [expr*]
 
 # Expressions
