Working on getting xs1 tests working, the array one in particular.

--- a/compiler/ast.cfg
+++ b/compiler/ast.cfg
@@ -34,7 +34,7 @@ StmtPar:        [pcall**]
 StmtSkip:       []
 StmtPcall:      [name, args*]
 StmtAss:        [left*, expr*]
-StmtAlias:      [left*, slice*]
+StmtAlias:      [name, slice*]
 StmtIf:         [cond*, thenstmt*, elsestmt*]
 StmtWhile:      [cond*, stmt*]
 StmtFor:        [var*, init*, bound*, step*, stmt*]
