Added outlines for AST transformation stages to create processes for each statement in parallel composition and for treatment of parallel replication. Simplified AST definition by removing Decls, Defs, Formals and ExprList node types and just embedding the lists directly. Also separated the signature and symbol tables out of semantics which has cleared up the use of these data structures throughout the code.

--- a/compiler/ast.cfg
+++ b/compiler/ast.cfg
@@ -14,36 +14,32 @@
 # TODO: maybe collapse decls and params with new type?
 
 # Program
-Program:        [decls*, defs*]
+Program:        [decls**, defs**]
 
 # Variable declarations
-Decls:          [decl**]
 Decl:           [name, type, expr]
 
 # Procedure declarations
-Defs:           [decl**]
-Def:            [name, type, formals*, decls*, stmt*]
+Def:            [name, type, formals**, decls**, stmt*]
 
 # Formal parameters
-Formals:        [params**]
 Param:          [name, type, expr]
 
 # Statements
 StmtSeq:        [stmt**]
-StmtPar:        [pcall**]
-StmtSkip:       []
-StmtPcall:      [name, args*]
-StmtAss:        [left*, expr*]
+StmtPar:        [stmt**]
 StmtAlias:      [name, slice*]
-StmtIf:         [cond*, thenstmt*, elsestmt*]
-StmtWhile:      [cond*, stmt*]
+StmtAss:        [left*, expr*]
 StmtFor:        [var*, init*, bound*, step*, stmt*]
-StmtRep:        [var*, init*, count*, pcall*]
+StmtIf:         [cond*, thenstmt*, elsestmt*]
 StmtOn:         [core*, pcall*]
+StmtWhile:      [cond*, stmt*]
+StmtPcall:      [name, args**]
+StmtRep:        [var*, init*, count*, pcall*]
 StmtReturn:     [expr*]
+StmtSkip:       []
 
 # Expressions
-ExprList:       [expr**]
 ExprSingle:     [elem*]
 ExprUnary:      [op, elem*]
 ExprBinop:      [op, elem*, right*]
@@ -52,8 +48,8 @@ ExprBinop:      [op, elem*, right*]
 ElemGroup:      [expr*]
 ElemSub:        [name, expr*]
 ElemSlice:      [name, begin*, end*]
-ElemFcall:      [name, args*]
-ElemPcall:      [name, args*]
+ElemFcall:      [name, args**]
+ElemPcall:      [name, args**]
 ElemNumber:     [value]
 ElemBoolean:    [value]
 ElemString:     [value]
