--- a/compiler/ast.cfg
+++ b/compiler/ast.cfg
@@ -35,7 +35,7 @@ StmtIf:         [cond*, thenstmt*, elsestmt*]
 StmtOn:         [core*, pcall*]
 StmtWhile:      [cond*, stmt*]
 StmtPcall:      [name, args**]
-StmtRep:        [var*, init*, count*, pcall*]
+StmtRep:        [var*, init*, count*, stmt*]
 StmtReturn:     [expr*]
 StmtSkip:       []
 
