Both parallel transformations now seem to be working. Updated context.py to work using sets, made some updates to ast.cfg and astgen.py to add __eq__, __ne__ and __hash__ methods to AST nodes, and extended the concrete definition and subsequent definition to allow inheretence.

--- a/compiler/ast.cfg
+++ b/compiler/ast.cfg
@@ -4,55 +4,61 @@
 # LICENSE.txt and at <http://github.xcore.com/>
 
 #-----------------------------------------------------------------
+# Each line denotes an AST node and has the following syntax:
+#   <parent>.<node>: [<attribue>*]
+#
 # Each entry is a Node sub-class name, listing the attributes
 # and child nodes of the class:
 #   <name>*     - a child node
 #   <name>**    - a sequence of child nodes
 #   <name>      - an attribute
+#
+# 'Node' is the root parent.
 #-----------------------------------------------------------------
 
-# TODO: maybe collapse decls and params with new type?
-
 # Program
-Program:        [decls**, defs**]
+Node.Program:        [decls**, defs**]
 
 # Variable declarations
-Decl:           [name, type, expr]
+Node.Decl:           [name, type, expr]
 
 # Procedure declarations
-Def:            [name, type, formals**, decls**, stmt*]
+Node.Def:            [name, type, formals**, decls**, stmt*]
 
 # Formal parameters
-Param:          [name, type, expr]
+Node.Param:          [name, type, expr]
 
 # Statements
-StmtSeq:        [stmt**]
-StmtPar:        [stmt**]
-StmtAlias:      [name, slice*]
-StmtAss:        [left*, expr*]
-StmtFor:        [var*, init*, bound*, step*, stmt*]
-StmtIf:         [cond*, thenstmt*, elsestmt*]
-StmtOn:         [core*, pcall*]
-StmtWhile:      [cond*, stmt*]
-StmtPcall:      [name, args**]
-StmtRep:        [var*, init*, count*, stmt*]
-StmtReturn:     [expr*]
-StmtSkip:       []
+Node.Stmt:           []
+Stmt.StmtSeq:        [stmt**]
+Stmt.StmtPar:        [stmt**]
+Stmt.StmtAlias:      [name, slice*]
+Stmt.StmtAss:        [left*, expr*]
+Stmt.StmtFor:        [var*, init*, bound*, step*, stmt*]
+Stmt.StmtIf:         [cond*, thenstmt*, elsestmt*]
+Stmt.StmtOn:         [core*, pcall*]
+Stmt.StmtWhile:      [cond*, stmt*]
+Stmt.StmtPcall:      [name, args**]
+Stmt.StmtRep:        [var*, init*, count*, stmt*]
+Stmt.StmtReturn:     [expr*]
+Stmt.StmtSkip:       []
 
 # Expressions
-ExprSingle:     [elem*]
-ExprUnary:      [op, elem*]
-ExprBinop:      [op, elem*, right*]
+Node.Expr:           []
+Expr.ExprSingle:     [elem*]
+Expr.ExprUnary:      [op, elem*]
+Expr.ExprBinop:      [op, elem*, right*]
 
 # Elements
-ElemId:         [name]
-ElemSub:        [name, expr*]
-ElemSlice:      [name, begin*, end*]
-ElemGroup:      [expr*]
-ElemFcall:      [name, args**]
-ElemPcall:      [name, args**]
-ElemNumber:     [value]
-ElemBoolean:    [value]
-ElemString:     [value]
-ElemChar:       [value]
+Node.Elem:           []
+Elem.ElemId:         [name]
+Elem.ElemSub:        [name, expr*]
+Elem.ElemSlice:      [name, begin*, end*]
+Elem.ElemGroup:      [expr*]
+Elem.ElemFcall:      [name, args**]
+Elem.ElemPcall:      [name, args**]
+Elem.ElemNumber:     [value]
+Elem.ElemBoolean:    [value]
+Elem.ElemString:     [value]
+Elem.ElemChar:       [value]
 
