Syntax changes:  - Added input and output statements.  - Added 'chan' and 'chanend' variable type.  - Added 'chanend' parameter type.  - Changed slice notation: 'a[base for count]'.  - Added an index range notation: 'i in [base for count]'.  - Changed for loop to use an index range.  - Changed parallel replicator to use multiple index ranges.  - Changed on statement to prefix a general statment instead of a process call.
All sequential MPI test and all sequential and parallel XS1 run okay.

--- a/compiler/ast.cfg
+++ b/compiler/ast.cfg
@@ -32,14 +32,16 @@ Node.Param:          [name, type, expr]
 Node.Stmt:           []
 Stmt.StmtSeq:        [stmt**]
 Stmt.StmtPar:        [stmt**]
-Stmt.StmtAlias:      [name, slice*]
 Stmt.StmtAss:        [left*, expr*]
-Stmt.StmtFor:        [var*, init*, bound*, step*, stmt*]
-Stmt.StmtIf:         [cond*, thenstmt*, elsestmt*]
-Stmt.StmtOn:         [core*, pcall*]
+Stmt.StmtIn:         [left*, expr*]
+Stmt.StmtOut:        [left*, expr*]
+Stmt.StmtAlias:      [name, slice*]
 Stmt.StmtWhile:      [cond*, stmt*]
+Stmt.StmtFor:        [index*, stmt*]
+Stmt.StmtRep:        [indicies**, stmt*]
+Stmt.StmtIf:         [cond*, thenstmt*, elsestmt*]
+Stmt.StmtOn:         [core*, stmt*]
 Stmt.StmtPcall:      [name, args**]
-Stmt.StmtRep:        [var*, init*, count*, stmt*]
 Stmt.StmtReturn:     [expr*]
 Stmt.StmtSkip:       []
 
@@ -53,10 +55,10 @@ Expr.ExprBinop:      [op, elem*, right*]
 Node.Elem:           []
 Elem.ElemId:         [name]
 Elem.ElemSub:        [name, expr*]
-Elem.ElemSlice:      [name, begin*, end*]
+Elem.ElemSlice:      [name, base*, count*]
+Elem.ElemIndexRange: [name, base*, count*]
 Elem.ElemGroup:      [expr*]
 Elem.ElemFcall:      [name, args**]
-Elem.ElemPcall:      [name, args**]
 Elem.ElemNumber:     [value]
 Elem.ElemBoolean:    [value]
 Elem.ElemString:     [value]
