Outlined implementation for 'connect' statement, did some more work on channel and channel end types and updated the pipeline example to show transformation steps for channels.

--- a/compiler/ast.cfg
+++ b/compiler/ast.cfg
@@ -36,6 +36,7 @@ Stmt.StmtAss:        [left*, expr*]
 Stmt.StmtIn:         [left*, expr*]
 Stmt.StmtOut:        [left*, expr*]
 Stmt.StmtAlias:      [name, slice*]
+Stmt.StmtConnect:    [name, chan*, core*]
 Stmt.StmtWhile:      [cond*, stmt*]
 Stmt.StmtFor:        [index*, stmt*]
 Stmt.StmtRep:        [indicies**, stmt*]
