Loads of bug fixing to get XS1 example and feature test sets working. All XS1 and MPI tests now working.

--- a/compiler/ast.cfg
+++ b/compiler/ast.cfg
@@ -35,8 +35,8 @@ Stmt.StmtPar:        [stmt**]
 Stmt.StmtAss:        [left*, expr*]
 Stmt.StmtIn:         [left*, expr*]
 Stmt.StmtOut:        [left*, expr*]
-Stmt.StmtAlias:      [name, slice*]
-Stmt.StmtConnect:    [name, chan*, core*]
+Stmt.StmtAlias:      [left*, slice*]
+Stmt.StmtConnect:    [chan*, core*]
 Stmt.StmtWhile:      [cond*, stmt*]
 Stmt.StmtFor:        [index*, stmt*]
 Stmt.StmtRep:        [indicies**, stmt*]
