Changed 'on' to take an expression instead of a core subscript, outlined the stages for labelling processes and channels and added some more examples playing with replication (tree, pipeline).

--- a/compiler/ast.cfg
+++ b/compiler/ast.cfg
@@ -36,12 +36,12 @@ Stmt.StmtAss:        [left*, expr*]
 Stmt.StmtIn:         [left*, expr*]
 Stmt.StmtOut:        [left*, expr*]
 Stmt.StmtAlias:      [left*, slice*]
-Stmt.StmtConnect:    [chan*, core*]
+Stmt.StmtConnect:    [chan*, expr*]
 Stmt.StmtWhile:      [cond*, stmt*]
 Stmt.StmtFor:        [index*, stmt*]
 Stmt.StmtRep:        [indicies**, stmt*]
 Stmt.StmtIf:         [cond*, thenstmt*, elsestmt*]
-Stmt.StmtOn:         [core*, stmt*]
+Stmt.StmtOn:         [expr*, stmt*]
 Stmt.StmtPcall:      [name, args**]
 Stmt.StmtReturn:     [expr*]
 Stmt.StmtSkip:       []
