Added a unique identifier to connections (per element of arrays).

--- a/compiler/ast.cfg
+++ b/compiler/ast.cfg
@@ -36,7 +36,7 @@ Stmt.StmtAss:        [left*, expr*]
 Stmt.StmtIn:         [left*, expr*]
 Stmt.StmtOut:        [left*, expr*]
 Stmt.StmtAlias:      [left*, slice*]
-Stmt.StmtConnect:    [left*, expr*]
+Stmt.StmtConnect:    [left*, id*, expr*]
 Stmt.StmtWhile:      [cond*, stmt*]
 Stmt.StmtFor:        [index*, stmt*]
 Stmt.StmtRep:        [indicies**, stmt*]
