Implemented an 'assert' statement, reworked connect and for tests (with asserts) and added a 'while' test.

--- a/compiler/ast.cfg
+++ b/compiler/ast.cfg
@@ -43,6 +43,7 @@ Stmt.StmtRep:        [indicies**, stmt*]
 Stmt.StmtIf:         [cond*, thenstmt*, elsestmt*]
 Stmt.StmtOn:         [expr*, stmt*]
 Stmt.StmtPcall:      [name, args**]
+Stmt.StmtAssert:     [expr*]
 Stmt.StmtReturn:     [expr*]
 Stmt.StmtSkip:       []
 
