Implemented new server syntax.

--- a/compiler/ast.cfg
+++ b/compiler/ast.cfg
@@ -37,6 +37,7 @@ Stmt.StmtIn:         [left*, expr*]
 Stmt.StmtOut:        [left*, expr*]
 Stmt.StmtAlias:      [left*, slice*]
 Stmt.StmtConnect:    [left*, id*, expr*, master]
+Stmt.StmtServer:     [server*, scope*]
 Stmt.StmtWhile:      [cond*, stmt*]
 Stmt.StmtFor:        [index*, stmt*]
 Stmt.StmtRep:        [indicies**, stmt*]
