--- a/compiler/ast.cfg
+++ b/compiler/ast.cfg
@@ -36,7 +36,7 @@ Stmt.StmtAss:        [left*, expr*]
 Stmt.StmtIn:         [left*, expr*]
 Stmt.StmtOut:        [left*, expr*]
 Stmt.StmtAlias:      [left*, slice*]
-Stmt.StmtConnect:    [left*, id*, expr*, master]
+Stmt.StmtConnect:    [left*, id*, expr*, type]
 Stmt.StmtServer:     [server*, client*]
 Stmt.StmtWhile:      [cond*, stmt*]
 Stmt.StmtFor:        [index*, stmt*]
