Front end changes for nested variable declarations.

--- a/compiler/ast.cfg
+++ b/compiler/ast.cfg
@@ -23,15 +23,15 @@ Node.Program:        [decls**, defs**]
 Node.Decl:           [name, type, expr]
 
 # Procedure declarations
-Node.Def:            [name, type, formals**, decls**, stmt*]
+Node.Def:            [name, type, formals**, stmt*]
 
 # Formal parameters
 Node.Param:          [name, type, expr]
 
 # Statements
 Node.Stmt:           []
-Stmt.StmtSeq:        [stmt**]
-Stmt.StmtPar:        [stmt**]
+Stmt.StmtSeq:        [decls**, stmt**]
+Stmt.StmtPar:        [decls**, stmt**]
 Stmt.StmtAss:        [left*, expr*]
 Stmt.StmtIn:         [left*, expr*]
 Stmt.StmtOut:        [left*, expr*]
