Mid-way through modifying AST transformations for nested declarations.

--- a/compiler/ast.cfg
+++ b/compiler/ast.cfg
@@ -20,10 +20,10 @@
 Node.Program:        [decls**, defs**]
 
 # Variable declarations
-Node.Decl:           [name, type, expr]
+Node.VarDecl:        [name, type, expr]
 
-# Procedure declarations
-Node.Def:            [name, type, formals**, stmt*]
+# Procedure definitions
+Node.ProcDef:        [name, type, formals**, stmt*]
 
 # Formal parameters
 Node.Param:          [name, type, expr]
