Added tag input and output statements for control tokens, modified server communications to use these (in progress) and implemented a parallel task-farming Mandlebrot program and ajusted the task farm.

--- a/compiler/ast.cfg
+++ b/compiler/ast.cfg
@@ -35,12 +35,14 @@ Stmt.StmtPar:        [decls**, stmt**]
 Stmt.StmtAss:        [left*, expr*]
 Stmt.StmtIn:         [left*, expr*]
 Stmt.StmtOut:        [left*, expr*]
+Stmt.StmtInTag:      [left*, expr*]
+Stmt.StmtOutTag:     [left*, expr*]
 Stmt.StmtAlias:      [left*, slice*]
 Stmt.StmtConnect:    [left*, id*, expr*, type]
 Stmt.StmtServer:     [decls**, server*, client*]
 Stmt.StmtWhile:      [cond*, stmt*]
 Stmt.StmtFor:        [index*, stmt*]
-Stmt.StmtRep:        [indicies**, stmt*]
+Stmt.StmtRep:        [indices**, stmt*]
 Stmt.StmtIf:         [cond*, thenstmt*, elsestmt*]
 Stmt.StmtOn:         [expr*, stmt*]
 Stmt.StmtPcall:      [name, args**]
