Implemented a distribution operator which can be applied to servers and parallel composition.

--- a/compiler/ast.cfg
+++ b/compiler/ast.cfg
@@ -31,7 +31,7 @@ Node.Param:          [name, type, expr]
 # Statements
 Node.Stmt:           []
 Stmt.StmtSeq:        [decls**, stmt**]
-Stmt.StmtPar:        [decls**, stmt**]
+Stmt.StmtPar:        [decls**, stmt**, distribute]
 Stmt.StmtAss:        [left*, expr*]
 Stmt.StmtIn:         [left*, expr*]
 Stmt.StmtOut:        [left*, expr*]
@@ -39,7 +39,7 @@ Stmt.StmtInTag:      [left*, expr*]
 Stmt.StmtOutTag:     [left*, expr*]
 Stmt.StmtAlias:      [left*, slice*]
 Stmt.StmtConnect:    [left*, id*, expr*, type]
-Stmt.StmtServer:     [decls**, server*, client*]
+Stmt.StmtServer:     [decls**, server*, client*, distribute]
 Stmt.StmtWhile:      [cond*, stmt*]
 Stmt.StmtFor:        [index*, stmt*]
 Stmt.StmtRep:        [indices**, stmt*]
